--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,12 +1,10 @@
 body {
-  background-color: #333;
+  background-color: rgb(179, 89, 89);
   color: #fff;
   font-family: 'Inconsolata', monospace;
   text-align: center;
 
 }
-
-
 
 .clitImg{
   border-radius: 50%;
@@ -70,13 +68,5 @@ h1{
   height: 2.5rem;
 }
 
-.quiz{
 
-}
-.submit{
-
-}
-.results{
-  
-}
 
